--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-simple-typewriter": "^5.0.1",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
